--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <meta charset="UTF-8" />
-<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<link rel="icon" type="image" href="/assets/images/a_logo_light.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Developer Portfolio</title>
+<title>Aathilingam</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
